--- a/mainnet/client/docker-compose.yml
+++ b/mainnet/client/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mainnet-client
     build:
       context: ../../
-      dockerfile: ./client/Dockerfile
+      dockerfile: ./node-client/Dockerfile
       args:
         GENESIS_PATH: "./mainnet/genesis.json"
         EXPOSED_PORTS: "9545 9546 40303"
