--- a/testnet/client/docker-compose.yml
+++ b/testnet/client/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: testnet-client
     build:
       context: ../../
-      dockerfile: ./client/Dockerfile
+      dockerfile: ./node-client/Dockerfile
       args:
         GENESIS_PATH: "./testnet/genesis.json"
         EXPOSED_PORTS: "8545 8546 30303"
