Rename bootnode data path to joy

--- a/bootnode/Dockerfile
+++ b/bootnode/Dockerfile
@@ -1,12 +1,12 @@
 FROM ghuchain/ghu-bootnode:v1.8.23a
 
 # Copy bootkey
-RUN mkdir /root/.ghu
+RUN mkdir /root/.joy
 ARG BOOTKEY_PATH
-COPY ${BOOTKEY_PATH} /root/.ghu/boot.key
+COPY ${BOOTKEY_PATH} /root/.joy/boot.key
 
 # Start bootnode
-CMD ["-nodekey", "/root/.ghu/boot.key", "-verbosity", "9"]
+CMD ["-nodekey", "/root/.joy/boot.key", "-verbosity", "9"]
 
 # Expose ports
 EXPOSE 30301
