Move command to script

--- a/docker/testnet-client-ipc/docker-compose.yml
+++ b/docker/testnet-client-ipc/docker-compose.yml
@@ -15,16 +15,17 @@ services:
       - ${DEPLOYER_DIR}/metadata/testnet/static-nodes.json:/root/.joy/static-nodes.json
       - ./init.sh:/root/.joy/init.sh
     entrypoint: /root/.joy/init.sh
-    command: [
-      "--syncmode=full",
-      "--gcmode=archive",
-      "--networkid=$CHAIN_ID",
-      "--nat=none",
-      "--targetgaslimit=4700000",
-      "--port=$LISTEN_PORT",
-      "--verbosity=4",
-      "--bootnodes=$BOOTNODES"
-    ]
+    # command: [
+    #   "--syncmode=full",
+    #   "--gcmode=archive",
+    #   "--networkid=$CHAIN_ID",
+    #   "--nat=none",
+    #   "--targetgaslimit=4700000",
+    #   "--port=$LISTEN_PORT",
+    #   "--verbosity=4",
+    #   "--bootnodes=$BOOTNODES",
+    #   "${@:2}"
+    # ]
     logging:
       driver: json-file
       options:
